[package]
name    = "aer_borrowck"
version.workspace = true
edition.workspace = true

[dependencies]
aer_lexer        = { path = "../aer_lexer" }
aer_ast          = { path = "../aer_ast" }
aer_parse        = { path = "../aer_parse" }
aer_middle       = { path = "../aer_middle" }
aer_hir          = { path = "../aer_hir" }
aer_hir_analysis = { path = "../aer_hir_analysis" }
